--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.1.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
