--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.5",
+    "material-ui": "^1.0.0-beta.47",
     "primeicons": "^1.0.0-beta.9",
     "primereact": "^2.0.0-beta.1",
     "react": "^16.4.1",
