add production config

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "foosball-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/foosball",
   "dependencies": {
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^2.0.1",
@@ -29,5 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "dotenv": "^6.0.0"
   }
 }
