Client is comatible with servers new version

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_HOST=http://localhost:8080
-REACT_APP_HOST_SOCKET=ws://localhost:8080
+REACT_APP_HOST=http://192.168.253.138:8080
+REACT_APP_HOST_SOCKET=ws://192.168.253.138:8080
