--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "classnames": "^2.2.5",
     "deep-freeze": "^0.0.1",
     "material-ui": "^1.0.0-beta.47",
+    "material-ui-image": "^3.0.0",
     "primeicons": "^1.0.0-beta.9",
     "primereact": "^2.0.0-beta.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-native": "^0.56.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
