--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.5",
     "deep-freeze": "^0.0.1",
     "material-ui": "^1.0.0-beta.47",
+    "material-ui-image": "^3.0.0",
     "primeicons": "^1.0.0-beta.9",
     "primereact": "^2.0.0-beta.1",
     "react": "^16.4.1",
