--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_HOST=http://localhost:8888/foosball
-REACT_APP_HOST_SOCKET=ws://localhost:8888/foosball
+REACT_APP_HOST=http://http://192.168.253.196:8888/foosball
+REACT_APP_HOST_SOCKET=ws://http://192.168.253.196:8888/foosball
