Add build script for hotev

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:hotdev": "cp ./.env.hotdev ./.env.production && npm run build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
