--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^2.0.1",
+    "@babel/runtime": "^7.0.0-beta.42",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.5",
