--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "homepage": "/foosball",
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.42",
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^2.0.1",
-    "@babel/runtime": "^7.0.0-beta.42",
+    "@material-ui/lab": "^3.0.0-alpha.13",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.5",
